--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="welcome_first">An age-old practice proved today to be an actual science is as fascinating as magic when it comes to Meditation through Brain Waves.</string>
     <string name="relaxing_sounds">Relaxing Sounds</string>
     <string name="welcome_second">"You can relax and sleep with sleeping sounds, nature sounds, rain sounds, meditation sounds and much more. Enjoy the high quality sleep sounds and wake up refreshed. "</string>
-    <string name="welcome_to">Welcome to</string>
+    <string name="welcome_to">Hello, 👋</string>
     <string name="str_home">Home</string>
     <string name="str_dashboard">Dashboard</string>
     <string name="str_infomation">Information</string>
