--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="memory">Memory</string>
     <string name="relaxation">Relaxation</string>
     <string name="sleep">Sleep</string>
-    <string name="intelligence">Intelligence</string>
+    <string name="intelligence">Inteligence</string>
     <string name="euphoria">Euphoria</string>
     <string name="healing">Healing</string>
     <string name="astral_travel">Astral Travel</string>
@@ -38,7 +38,7 @@
     <string name="waterfall">Waterfall</string>
     <string name="underwater">Underwater</string>
     <string name="dessert">Dessert</string>
-    <string name="train">Train Journey</string>
+    <string name="train">Train</string>
     <string name="air_travel">Air Travel</string>
     <string name="cafe">Cafe</string>
     <string name="harmony">Harmony</string>
